--- a/semana3/portfolio/style.css
+++ b/semana3/portfolio/style.css
@@ -44,13 +44,13 @@ li {
 }
 
 .apresentacao {
+    color: rgb(52, 39, 233);
     text-align: justify;
     margin-left: 50px;
     margin-top: 40px;
     font-size: 20px;
     font-family: cursive;
     padding-top: 20px;
-    color: white;
 }
 
 a {
