--- a/semana4/react/labetube/src/App.css
+++ b/semana4/react/labetube/src/App.css
@@ -19,14 +19,21 @@ header {
     height: 10%;
 }
 .icon{
-  width: 50px;
+  width: 20px;
 }
 main {
     min-height: 80%;
     display: flex;
 }
-
+ul{
+  text-decoration: none;
+  padding-left:10px;
+}
+li{
+  padding-top: 10px;
+}
 .menu-vertical {
+  display: flex;
     flex-basis: 200px;
     border-right-style: solid;
     border-right-width: thin;
@@ -98,7 +105,7 @@ main {
 footer {
     height: 10%;
     background-color: grey;
-    margin: 0;
+    margin-top: 100vh;
     padding: 0;
     display: flex;
     align-items: center;
